css/index.css
html, body{
  background-color:
  scroll-behavior: smooth;
  background-color: #1B2223;
  font-family: Arial;
}

.main{
  display: flex;
  justify-content: center;
  flex-direction: column;
  overflow-x: auto;
}

.parentMenu{
  height: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  overflow-x: auto;
}

.menu{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  overflow-x: auto;
}

.parentInfo{
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  overflow-x: auto;
}

.info{
  display: flex;
  align-items: center;
  gap: 10px;
}

.parentArticle{
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  overflow-x: auto;
}

.header{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
  overflow-x: auto;
}

.article{
  display: flex;
  flex-direction: column;
}

#profile{
  width:400px;
}

#icon{
  width:20px;
}

#logo{
  width: 120px;
}

#cert{
  width: 500px;
}

button{
  font-size: 20px;
}


ul{
  list-style-type: none;
}

li{
  color: #F4FEFD;
  font-size: 20px;
}

span{
  font-size: 20px;
  color: #0EF6CC;
}

p{
  color: #F4FEFD;
  font-size: 20px;
}

h1{
  color: #0EF6CC;
  font-size: 40px;
  font-weight: bold;
}

h2{
  color: #0EF6CC;
  font-size: 30px;
  font-weight: bold;
}

h3{
  color: #0EF6CC;
  font-size: 20px;
  font-weight: bold;
}

a{
  color: #0EF6CC;
  font-size: 20px;
}

